--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.4.1",
     "telegraf": "^4.15.3",
     "telegraf-ratelimit": "^2.0.0",
+    "viem": "^2.31.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
